2010-11-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Do not set
	`permanent-local' property for `backup-by-copying-when-mismatch'.

2010-10-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): For root, preserve
	owner and group when editing files.  (Bug#7289)

2010-10-28 Glenn Morris <rgm@gnu.org>

	* tramp-fish.el: Update URL in comment (viewcvs -> viewvc).

2010-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-inline-coding): Return `nil' in case of
	errors.

2010-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Use "e0" in
	order to make stat results a float.  Patch by Andreas Schwab
	<schwab@linux-m68k.org>.

2010-10-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell):
	Suppress expansion of tabs to spaces.  Reported by Dale Sedivec
	<dale@codefu.org>.

2010-08-23  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.19 released.

2010-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-symbolic-link): Flush file
	properties.
	(tramp-handle-process-file): Call the program in a subshell, in
	order to preserve working directory.
	(tramp-action-password): Hide password prompt before next run.
	(tramp-process-actions): Widen connection buffer for the trace.

2010-08-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-vc-registered-read-file-names): Read input as
	here-document, otherwise the command could exceed maximum length
	of command line.
	(tramp-handle-vc-registered): Call script accordingly.  Reported
	by Toru TSUNEYOSHI <t_tuneyosi@hotmail.com>.

2010-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-file-process ): Set connection
	property "vec".